Include middleware CORS Include HandleFunc NotFound Update Swagger Documentation Update Middleware Logger
