# controller/currency.go
@@ -18,30 +18,11 @@ package controller
 import (
 	"encoding/json"
 	"net/http"
+	"strconv"
 	"time"
 
 	"github.com/CharlesSchiavinato/hurbcom-challenge-bravo/model"
 )
-
-// Retorna as informações da Moeda solicitada
-// swagger:response currencyResponse
-type currencyResponseWrapper struct {
-	// Informações da Moeda
-	// in: body
-	Body struct {
-		model.Currency
-	}
-}
-
-// Retorna as informações de todas as Moedas
-// swagger:response currenciesResponse
-type currenciesResponseWrapper struct {
-	// Todas as Moedas
-	// in: body
-	Body struct {
-		model.Currencies
-	}
-}
 
 type Currency struct{}
 
@@ -52,9 +33,11 @@ func NewCurrency() *Currency {
 // swagger:route GET /currency/{id} Moedas Obter
 // Retorna as informações da moeda solicitada
 // responses:
-//	200: currencyResponse
+//  default: errorResponse
+//  200: currencyResponse
 
-func (currencyController *Currency) Get(rw http.ResponseWriter, req *http.Request) {
+// ProductList returns all products from the data store
+func (controllerCurrency *Currency) Get(rw http.ResponseWriter, req *http.Request) {
 	currency := model.Currency{
 		ID:            1,
 		Currency:      "USD",
@@ -65,12 +48,14 @@ func (currencyController *Currency) Get(rw http.ResponseWriter, req *http.Reques
 	json.NewEncoder(rw).Encode(currency)
 }
 
-//	swagger:route GET /currency Moedas Listar
-//	Retorna as informações de todas as moedas
-//	responses:
-//		200: currenciesResponse
+// swagger:route GET /currency Moedas Listar
+// Retorna as informações de todas as moedas
+// responses:
+//
+//	default: errorResponse
+//	200: currenciesResponse
 
-func (currencyController *Currency) List(rw http.ResponseWriter, req *http.Request) {
+func (controllerCurrency *Currency) List(rw http.ResponseWriter, req *http.Request) {
 	currency := model.Currencies{
 		model.Currency{
 			ID:            1,
@@ -90,7 +75,13 @@ func (currencyController *Currency) List(rw http.ResponseWriter, req *http.Reque
 	json.NewEncoder(rw).Encode(currency)
 }
 
-func (currencyController *Currency) Insert(rw http.ResponseWriter, req *http.Request) {
+// swagger:route POST /currency/{id} Moedas Incluir
+// Adiciona uma nova moeda
+// responses:
+//
+//	default: errorResponse
+//	201: currencyResponse
+func (controllerCurrency *Currency) Insert(rw http.ResponseWriter, req *http.Request) {
 	currency := model.Currency{
 		ID:            1,
 		Currency:      "USD",
@@ -103,7 +94,13 @@ func (currencyController *Currency) Insert(rw http.ResponseWriter, req *http.Req
 	json.NewEncoder(rw).Encode(currency)
 }
 
-func (currencyController *Currency) Update(rw http.ResponseWriter, req *http.Request) {
+// swagger:route PUT /currency/{id} Moedas Alterar
+// Atualiza as informações da moeda solicitada
+// responses:
+//
+//	default: errorResponse
+//	200: currencyResponse
+func (controllerCurrency *Currency) Update(rw http.ResponseWriter, req *http.Request) {
 	currency := model.Currency{
 		ID:            1,
 		Currency:      "USD",
@@ -114,6 +111,36 @@ func (currencyController *Currency) Update(rw http.ResponseWriter, req *http.Req
 	json.NewEncoder(rw).Encode(currency)
 }
 
-func (currencyController *Currency) Delete(rw http.ResponseWriter, req *http.Request) {
+// swagger:route DELETE /currency/{id} Moedas Excluir
+// Apaga a moeda solicitada
+// responses:
+//
+//	default: errorResponse
+//	201: noContentResponse
+func (controllerCurrency *Currency) Delete(rw http.ResponseWriter, req *http.Request) {
 	rw.WriteHeader(http.StatusNoContent)
+}
+
+// swagger:route GET /currency/convert?from=BTC&to=EUR&amount=123.45 Moedas Converter
+// Conversão de valor entre moedas
+// responses:
+//
+//	default: errorResponse
+//	200: noContentResponse
+func (controllerCurrency *Currency) Convert(rw http.ResponseWriter, req *http.Request) {
+	amount, _ := strconv.ParseFloat(req.URL.Query().Get("amount"), 32)
+
+	response := convert{
+		CurrencyFrom: req.URL.Query().Get("from"),
+		CurrencyTo:   req.URL.Query().Get("to"),
+		Amount:       float32(amount),
+	}
+
+	json.NewEncoder(rw).Encode(response)
+}
+
+type convert struct {
+	CurrencyFrom string
+	CurrencyTo   string
+	Amount       float32
 }
