# route/currency.go
@@ -2,15 +2,17 @@ package route
 
 import (
 	"github.com/CharlesSchiavinato/hurbcom-challenge-bravo/controller"
-	"github.com/CharlesSchiavinato/hurbcom-challenge-bravo/handler"
+	"github.com/CharlesSchiavinato/hurbcom-challenge-bravo/router"
 )
 
-func CurrencyRoute(handlerRouter handler.Router) {
+func CurrencyRoute(appRouter router.Router) {
 	currencyController := controller.NewCurrency()
 
-	handlerRouter.Get("/currency", currencyController.List)
-	handlerRouter.Get("/currency/{id}", currencyController.Get)
-	handlerRouter.Post("/currency", currencyController.Insert)
-	handlerRouter.Put("/currency/{id}", currencyController.Update)
-	handlerRouter.Delete("/currency/{id}", currencyController.Delete)
+	appRouter.Get("/currency", currencyController.List)
+	appRouter.Get("/currency/convert", currencyController.Convert)
+	appRouter.Get("/currency/{id}", currencyController.Get)
+
+	appRouter.Post("/currency", currencyController.Insert)
+	appRouter.Put("/currency/{id}", currencyController.Update)
+	appRouter.Delete("/currency/{id}", currencyController.Delete)
 }
